# RustyGuiMaker

./: Cargo.toml  README.md
Resources/: README.md  Resources.md
Resources/Windows Prerequisites/: Vulkano.txt  rust.txt
RustyGuiMaker/: Cargo.toml
RustyGuiMaker/src/: lib.rs  lib.rs Bkup
RustyGuiMaker/src/Structs/: Callbacks.rs  Colors.rs  Shaders.rs  Vertex.rs  mod.rs
RustyGuiMaker/src/Test/: mod.rs
RustyGuiMakerExamples/: Cargo.toml
RustyGuiMakerExamples/src/: main.rs  mainTriangle.rs
RustyGuiMakerTest/: Cargo.toml
RustyGuiMakerTest/src/: main.rs
