[package]
name = "RustyGuiMaker"
version = "0.1.0"
authors = ["ichi0915 <ichi0915@gmail.com>", "toaxd <toaxdjr@gmail.com>", "panduro <panduro.sergio@outlook.es>"]
license = "MPL-2.0"
repository = "https://github.com/ichi0915/RustyGuiMaker"
readme = "../README.md"
keywords = ["vulkan", "graphic", "GUI"]
documentation = "NA"
edition = "2018"

[dependencies]
vulkano-shaders = "0.14"
vulkano-win = "0.14"
vulkano = "0.14.0"
winit = "0.19.3"
#winit = "0.20.0-alpha3"
image = "0.21.1"

cgmath = "0.17"
time = "0.1.42"


#using vulkano-shaders = "0.13" due to vulkano text
#vulkano_text = "0.11.0"
#vulkano-shaders = "0.13"
